<resources>
    <string name="app_name">Shuttle service</string>
    <string name="icon_image_view">icon_image_view</string>
    <string name="humidity_percentage_symbol">%</string>
    <string name="temperature_degree_symbol">°</string>
    <string name="today">Today</string>
    <string name="date_format_time">HH:mm</string>
    <string name="sunny">Sunny</string>
    <string name="from">From</string>
    <string name="select_pick_up_location">Select pick-up location</string>
    <string name="to">To</string>
    <string name="select_drop_off_location">Select drop-off location</string>
    <string name="gray_line_divider">gray_line_divider</string>
    <string name="arrival">Arrival</string>
    <string name="departure">Departure</string>
    <string name="reduce_expand_image_button">reduceExpandImageButton</string>
    <string name="seats">Seats</string>
    <string name="travel_date">Travel date</string>
    <string name="travel_info">Travel info</string>
    <string name="date">Date</string>
    <string name="select_date">Select date</string>
    <string name="shuttle_image_view">shuttle_image_view</string>
    <string name="code_image_view">code_image_view</string>
    <string name="arrow_image_view">arrow_image_view</string>
    <string name="contact_number">Contact number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="user_account">User</string>
    <string name="select_town">Select town</string>
    <string name="travel_cost">Travel cost</string>
    <string name="total_cost">Total cost</string>
    <string name="cost_per_seat">Cost per seat</string>
    <string name="select_travel_date">Select travel date</string>
    <string name="price_per_person">Price per person/per seat</string>
    <string name="update_account">Update account</string>
    <string name="check_availability">Check availability</string>
    <string name="make_booking">Make booking</string>
    <string name="shuttle_logo">shuttle_logo</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_registered_click_here">Not registered?</string>
    <string name="already_registered_click_here">Already registered?</string>
    <string name="or">or</string>
    <string name="select_valid_date">Select valid date</string>
    <string name="select_valid_trip">Select valid trip</string>
    <string name="seats_available">seats available</string>
    <string name="next_stop">Next stop</string>
    <string name="arriving_in">Arriving in</string>
    <string name="weather">Weather</string>
    <string name="route_and_stops">Route and stops</string>
    <string name="price_check">Price check</string>
    <string name="booking_history">Booking history</string>
    <string name="availability">Availability</string>
    <string name="user_info">User info</string>
    <string name="contact_info">Contact info</string>
    <string name="not_connected_to_network">Not connected to network</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="login_failed">Login failed!</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="password_reset_sent">Password reset mail sent</string>
    <string name="failed_to_send">Failed to send</string>
    <string name="not_signed_in">not signed in</string>
    <string name="admin">admin</string>
    <string name="user">user</string>
    <string name="updating_user_info">updating user info</string>
    <string name="on">On:</string>
    <string name="off">Off:</string>
    <string name="passengers">Passengers:</string>
    <string name="invalid_view_type">Invalid view type:</string>
    <string name="gmt_time_zome">GMT</string>
    <string name="date_format_weekday_time">EEEE HH:mm</string>
    <string name="zero">0</string>
    <string name="colon">:</string>
    <string name="on_time">- -</string>
    <string name="booking">Booking:</string>
    <string name="date_format_day_month_year_time">dd MMM yyyy, HH:mm</string>
    <string name="intent_type_image">image/*</string>
    <string name="user_update_success">User update success</string>
    <string name="image_uploaded">Image uploaded</string>
    <string name="user_image">user_image</string>
    <string name="loading_cache_info">Loading cache info</string>
    <string name="delete_account">Delete account</string>
    <string name="click_image_to_change">click image to change</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="date_format_day_month_year">dd MMM yyyy</string>
    <string name="intent_type_email">text/html</string>
    <string name="no_seats_available">No seats available</string>
    <string name="added_to_widget">Added to widget</string>
    <string name="depart_at">Depart:</string>
    <string name="arrive_at">Arrive:</string>
    <string name="phone">Phone</string>
    <string name="error_today_weather">Error loading today`s weather</string>
    <string name="error_loading_weather">Error loading weather</string>
    <string name="first_check_availability">First check availability</string>
    <string name="booking_success">Booking loaded success!</string>
    <string name="booking_failed">Booking failed!</string>
    <string name="selection">Selection</string>
    <string name="connection_image_view">connection image view</string>
    <string name="shuttle_departs_in">Shuttle departs in 30 minutes for</string>
    <string name="connection_cloud">connection cloud</string>
    <string name="today_weather_icon">today_weather_icon</string>
    <string name="share">Share</string>
    <string name="add_to_widget">Add to widget</string>
    <string name="weather_icon">weather_icon</string>
    <string name="address">Address</string>
    <string name="_101_shuttle_road_overhere">101 Shuttle Road, OverHere</string>
    <string name="me_shuttleservice_com">me@shuttleservice.com</string>
    <string name="_011_123_4567">011 123 4567</string>
    <string name="widget_has_been_updated">Widget has been updated!</string>
    <string name="update_widget">Update widget</string>
    <string name="open_app">Open app</string>
    <string name="sign_out_and_exit">Sign out and exit</string>
    <string name="exit">Exit</string>
</resources>
