<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTravelCostLabel"
        style="@style/TextDividerLabel"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/travel_cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivTravelCostDivider"
        style="@style/DividerImageView"
        android:contentDescription="@string/gray_line_divider"
        app:layout_constraintBottom_toBottomOf="@+id/tvTravelCostLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTravelCostLabel"
        app:layout_constraintTop_toTopOf="@+id/tvTravelCostLabel" />

    <TextView
        android:id="@+id/tvTravelCostPerSeatLabel"
        style="@style/TextPrimaryDescription"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cost_per_seat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTravelCostLabel" />

    <TextView
        android:id="@+id/tvTravelCostPerSeat"
        style="@style/TextPriceMediumRed"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/tvTravelCostPerSeatLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvTravelCostPerSeatLabel"
        tools:text="R 123.45" />

    <TextView
        android:id="@+id/tvTravelCostTotalLabel"
        style="@style/TextPrimaryDescription"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/total_cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTravelCostPerSeat" />

    <TextView
        android:id="@+id/tvTravelCostTotal"
        style="@style/TextPriceMediumRed"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvTravelCostTotalLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvTravelCostTotalLabel"
        tools:text="R 123.45" />

</android.support.constraint.ConstraintLayout>