<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tvPriceFrom"
        style="@style/TextTopGrayLabel"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivTravelFromDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorDarkGray"
        android:contentDescription="@string/gray_line_divider"
        app:layout_constraintBottom_toBottomOf="@+id/tvPriceFrom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPriceFrom"
        app:layout_constraintTop_toTopOf="@+id/tvPriceFrom" />

    <TextView
        android:id="@+id/tvPriceSelectPickUp"
        style="@style/TextPrimaryDescription"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_pick_up_location"
        app:layout_constraintStart_toStartOf="@+id/tvPriceFrom"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceFrom" />

    <Spinner
        android:id="@+id/spPriceFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        tools:entries="@array/route_stops_town_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceSelectPickUp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/tvPriceTo"
        style="@style/TextTopGrayLabel"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spPriceFrom" />

    <ImageView
        android:id="@+id/ivTravelToDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorDarkGray"
        android:contentDescription="@string/gray_line_divider"
        app:layout_constraintBottom_toBottomOf="@+id/tvPriceTo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPriceTo"
        app:layout_constraintTop_toTopOf="@+id/tvPriceTo" />

    <TextView
        android:id="@+id/tvPriceDropOff"
        style="@style/TextPrimaryDescription"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_drop_off_location"
        app:layout_constraintStart_toStartOf="@+id/tvPriceTo"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceTo" />

    <Spinner
        android:id="@+id/spPriceTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        tools:entries="@array/route_stops_town_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceDropOff"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

</android.support.constraint.ConstraintLayout>