<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTravelInfoLabel"
        style="@style/TextDividerLabel"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/user_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivTravelInfoDivider"
        style="@style/DividerImageView"
        android:contentDescription="@string/gray_line_divider"
        app:layout_constraintBottom_toBottomOf="@+id/tvTravelInfoLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTravelInfoLabel"
        app:layout_constraintTop_toTopOf="@+id/tvTravelInfoLabel" />

    <TextView
        android:id="@+id/tvPassengerInfoNameLabel"
        style="@style/TextPrimaryDescription"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTravelInfoLabel" />

    <TextView
        android:id="@+id/tvPassengerInfoName"
        style="@style/TextDefaultUserInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvPassengerInfoNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvPassengerInfoNameLabel"
        tools:text="James Bond" />

    <TextView
        android:id="@+id/tvPassengerInfoEmailLabel"
        style="@style/TextPrimaryDescription"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassengerInfoName" />

    <TextView
        android:id="@+id/tvPassengerInfoEmail"
        style="@style/TextDefaultUserInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvPassengerInfoEmailLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvPassengerInfoEmailLabel"
        tools:text="me@somewhere.com" />

    <TextView
        android:id="@+id/tvPassengerInfoContactNumLabel"
        style="@style/TextPrimaryDescription"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/contact_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassengerInfoEmail" />

    <TextView
        android:id="@+id/tvPassengerInfoContactNum"
        style="@style/TextDefaultUserInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvPassengerInfoContactNumLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvPassengerInfoContactNumLabel"
        tools:text="011 123 4567" />

</android.support.constraint.ConstraintLayout>