<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTravelInfoLabel"
        style="@style/TextDividerLabel"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/travel_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivTravelInfoDivider"
        style="@style/DividerImageView"
        android:contentDescription="@string/gray_line_divider"
        app:layout_constraintBottom_toBottomOf="@+id/tvTravelInfoLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTravelInfoLabel"
        app:layout_constraintTop_toTopOf="@+id/tvTravelInfoLabel" />

    <TextView
        android:id="@+id/tvPassengerInfoDateLabel"
        style="@style/TextPrimaryDescription"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTravelInfoLabel" />

    <TextView
        android:id="@+id/tvPassengerInfoNDate"
        style="@style/TextDateSelect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/tvPassengerInfoDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvPassengerInfoDateLabel" />

    <TextView
        android:id="@+id/tvPassengerInfoFromLabel"
        style="@style/TextPrimaryDescription"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassengerInfoNDate" />

    <Spinner
        android:id="@+id/spPassengerInfoFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/tvPassengerInfoFromLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvPassengerInfoFromLabel"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:entries="@array/route_stops_town_name" />

    <TextView
        android:id="@+id/tvPassengerInfoToLabel"
        style="@style/TextPrimaryDescription"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spPassengerInfoFrom" />

    <Spinner
        android:id="@+id/spPassengerInfoTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/tvPassengerInfoToLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvPassengerInfoToLabel"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:entries="@array/route_stops_town_name" />

    <TextView
        android:id="@+id/tvTravelInfoSeatsLabel"
        style="@style/TextPrimaryDescription"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="clip_vertical"
        android:text="@string/seats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spPassengerInfoTo" />

    <Spinner
        android:id="@+id/spTravelInfoSeats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/tvTravelInfoSeatsLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvTravelInfoSeatsLabel"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>